syntax = "proto3";
option csharp_namespace = "GrpcCL";
package sep3.g3;
import "google/protobuf/timestamp.proto";

message UserRequest {
  string username = 1;
}

message UserCreationRequest {
  string username = 1;
  string firstname = 2;
  string password = 3;
  AddressMessage address=4;
}

message UserLoginRequest {
  string username = 1;
  string password = 2;
}

message AddressMessage {
  int32 address_id = 1;
  string street = 2;
  string street_number = 3;
  int32 post_code = 4;
  string city = 5;
  double longitude = 6;
  double latitude = 7;
}

message UserMessage {
  string username = 1;
  string firstname = 2;
  string password = 3;
  AddressMessage address = 4;
}


service UserService {
  rpc getByUsername(UserRequest) returns (UserMessage);
  rpc register(UserCreationRequest) returns (UserMessage);
  rpc login(UserLoginRequest) returns (UserMessage);
}